# BasiCPythonCompiler

./: .gitignore  README.md  ast_nodes.py  codegen.py  ir.py  lexer.py  optimizer.py  output  output.c  parser.py  parsetab.py  py_runtime.c  py_runtime.h  pyproject.toml  run_tests.py  semantic.py
.github/workflows/: ci.yml
compiler/: __init__.py  __main__.py  pipeline.py
compiler/backend/: __init__.py  c_codegen.py
compiler/cli/: __init__.py  app.py
compiler/core/: __init__.py  ast.py  types.py
compiler/frontend/: __init__.py  ast_lowering.py  cst.py  lexer.py  source.py  tokens.py
compiler/ir/: __init__.py  analysis.py  cfg.py  generator.py  lowering.py  model.py  passes.py  ssa.py
compiler/optimizer/: __init__.py  folding.py
compiler/runtime/: __init__.py  c_runtime.py
compiler/semantic/: __init__.py  analyzer.py  control_flow.py  model.py  resolver.py  symbols.py  type_checker.py
compiler/utils/: error_handler.py
compiler/vm/: __init__.py  builtins.py  bytecode.py  errors.py  interpreter.py  lowering.py  objects.py
tests/: __init__.py  test_cli.py  test_frontend.py  test_ir.py  test_pipeline.py  test_ssa.py  test_tier2_phase1.py  test_vm_runtime.py
