[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-subset-compiler"
version = "0.1.0"
description = "A package-driven compiler for a documented Python subset"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Shubh Sharma" }
]
keywords = ["compiler", "python", "c", "transpiler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
python-subset-compiler = "compiler.cli.app:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["compiler*"]

[tool.unittest]
start-directory = "tests"
pattern = "test*.py"
